--- a/front-end/css/base.css
+++ b/front-end/css/base.css
@@ -1,57 +1,196 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+
+
+:root {
+    --nav-width: 68px;
+    --first-color: #4723D9;
+    --first-color-light: #AFA5D9;
+    --white-color: #F7F6FB;
+    --body-font: 'Nunito', sans-serif;
+    --normal-font-size: 1rem;
+    --z-fixed: 100
+}
+
+*,
+::before,
+::after {
+    box-sizing: border-box
+}
+
 body {
-  font-family: 'Inter', sans-serif;
+    position: relative;
+    margin: var(--header-height) 0 0 0;
+    padding: 0 1rem;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    transition: .5s
 }
 
-body .menu-bar {
-  background-color: #f8f9fa;
+a {
+    text-decoration: none
 }
 
-body .menu-bar nav {
-  margin: auto 20px;
+.header {
+    height: var(--header-height);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999 !important;
+    padding: 0 1rem;
+    background-color: var(--white-color);
+    z-index: var(--z-fixed);
+    transition: .5s
 }
 
-body .menu-bar nav .logo {
-  width: 20%;
+.header_toggle {
+    color: var(--first-color);
+    font-size: 1.5rem;
+    cursor: pointer
 }
 
-body .menu-bar nav .navbar-brand {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
-  color: #0D062D;
+
+#nav-bar .nav_logo img{
+    width: 100%;
+}
+.header_img img {
+    width: 40px
 }
 
-body .menu-bar nav .nav-bar-right .profile {
-  text-decoration: none;
+.l-navbar {
+    position: fixed;
+    top: 0;
+    left: -30%;
+    width: var(--nav-width);
+    height: 100vh;
+    background-color: var(--first-color);
+    padding: .5rem 1rem 0 0;
+    transition: .5s;
+    z-index: var(--z-fixed);
+    z-index: 9999999;
 }
 
-body .menu-bar nav .nav-bar-right .profile .row {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.nav {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden
 }
 
-body .menu-bar nav .nav-bar-right .profile img {
-  max-height: 50px;
-  width: auto;
+
+.nav_link {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    align-items: center;
+    column-gap: 1rem;
+    padding: .5rem 0 .5rem 1.5rem;
 }
 
-body .menu-bar nav .nav-bar-right .profile .column {
-  margin-left: 10px;
+
+.nav_logo {
+    align-items: center;
+    margin-bottom: 2rem;
+    padding: .5rem 0 .5rem 1.5rem;
 }
 
-body .menu-bar nav .nav-bar-right .profile .name {
-  font-size: 16px;
-  color: #0D062D;
+.nav_logo-icon {
+    font-size: 1.25rem;
+    color: var(--white-color)
 }
 
-body .menu-bar nav .nav-bar-right .profile .profession {
-  color: #787486;
-  font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
-  text-align: right;
+.nav_logo-name {
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 24px;
 }
-/*# sourceMappingURL=base.css.map */
+
+.nav_link {
+    position: relative;
+    color: var(--first-color-light);
+    margin-bottom: 1.5rem;
+    transition: .3s
+}
+
+.nav_link:hover {
+    color: var(--white-color)
+}
+
+.nav_icon {
+    font-size: 1.25rem;
+}
+
+.show {
+    left: 0;
+}
+
+.body-pd {
+    padding-left: calc(var(--nav-width) + 1rem);
+}
+
+.active {
+    color: var(--white-color);
+}
+
+.active::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 2px;
+    height: 32px;
+    background-color: var(--white-color)
+}
+
+.height-100 {
+    height: 100vh;
+}
+.top-nav{
+    text-align: right;
+    background: var(--white-color);
+}
+.top-nav img{
+    max-width: 60px;
+ 
+}
+.top-nav .col{
+    display: inline-block;
+    
+}
+.profile-side-icon i{
+    font-size: 25px;
+    color: #919191;
+}
+
+
+@media screen and (min-width: 768px) {
+    body {
+        margin: calc(var(--header-height) + 1rem) 0 0 0;
+        padding-left: calc(var(--nav-width));
+    }
+
+    .header {
+        height: calc(var(--header-height) + 1rem);
+        padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
+    }
+
+    .header_img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .header_img img {
+        width: 45px
+    }
+
+    .l-navbar {
+        left: 0;
+        padding: 1rem 1rem 0 0
+    }
+
+    .show {
+        width: calc(var(--nav-width) + 156px)
+    }
+
+    .body-pd {
+        padding-left: calc(var(--nav-width) + 188px)
+    }
+}
