--- a/front-end/css/base.css
+++ b/front-end/css/base.css
@@ -1,196 +1,202 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+/*
+    DEMO STYLE
+*/
 
-
-:root {
-    --nav-width: 68px;
-    --first-color: #4723D9;
-    --first-color-light: #AFA5D9;
-    --white-color: #F7F6FB;
-    --body-font: 'Nunito', sans-serif;
-    --normal-font-size: 1rem;
-    --z-fixed: 100
-}
-
-*,
-::before,
-::after {
-    box-sizing: border-box
-}
-
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
-    position: relative;
-    margin: var(--header-height) 0 0 0;
-    padding: 0 1rem;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    transition: .5s
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
 }
 
-a {
-    text-decoration: none
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
-.header {
-    height: var(--header-height);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999999 !important;
-    padding: 0 1rem;
-    background-color: var(--white-color);
-    z-index: var(--z-fixed);
-    transition: .5s
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
 }
 
-.header_toggle {
-    color: var(--first-color);
-    font-size: 1.5rem;
-    cursor: pointer
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
-
-
-#nav-bar .nav_logo img{
-    width: 100%;
-}
-.header_img img {
-    width: 40px
-}
-
-.l-navbar {
-    position: fixed;
-    top: 0;
-    left: -30%;
-    width: var(--nav-width);
-    height: 100vh;
-    background-color: var(--first-color);
-    padding: .5rem 1rem 0 0;
-    transition: .5s;
-    z-index: var(--z-fixed);
-    z-index: 9999999;
-}
-
-.nav {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden
-}
-
-
-.nav_link {
-    display: grid;
-    grid-template-columns: max-content max-content;
+.navbar-nav{
     align-items: center;
-    column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem;
 }
-
-
-.nav_logo {
-    align-items: center;
-    margin-bottom: 2rem;
-    padding: .5rem 0 .5rem 1.5rem;
-}
-
-.nav_logo-icon {
-    font-size: 1.25rem;
-    color: var(--white-color)
-}
-
-.nav_logo-name {
-    color: var(--white-color);
-    font-weight: 700;
-    font-size: 24px;
-}
-
-.nav_link {
-    position: relative;
-    color: var(--first-color-light);
-    margin-bottom: 1.5rem;
-    transition: .3s
-}
-
-.nav_link:hover {
-    color: var(--white-color)
-}
-
-.nav_icon {
-    font-size: 1.25rem;
-}
-
-.show {
-    left: 0;
-}
-
-.body-pd {
-    padding-left: calc(var(--nav-width) + 1rem);
-}
-
-.active {
-    color: var(--white-color);
-}
-
-.active::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 2px;
-    height: 32px;
-    background-color: var(--white-color)
-}
-
-.height-100 {
-    height: 100vh;
-}
-.top-nav{
-    text-align: right;
-    background: var(--white-color);
-}
-.top-nav img{
-    max-width: 60px;
- 
-}
-.top-nav .col{
-    display: inline-block;
-    
-}
-.profile-side-icon i{
+.nav-link i{
     font-size: 25px;
-    color: #919191;
+}
+.nav-link .name{
+    margin: 0;
+}
+.nav-link .profession{
+    margin: 0;
+    font-size: 14px;
+}
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+.nav-item .nav-link img{
+    max-width: 40px;
+}
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+#sidebar .sidebar-header .logo {
+    max-width: 50px
+}
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+ul.CTAs .title{
+    text-align: center;
+}
+ul.CTAs .text{
+    font-size: 12px;
+}
+ul.CTAs i {
+    text-align: center;
+    font-size: 2.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+ul.CTAs {
+   background-color: #6d7fcc;
 }
 
 
-@media screen and (min-width: 768px) {
-    body {
-        margin: calc(var(--header-height) + 1rem) 0 0 0;
-        padding-left: calc(var(--nav-width));
-    }
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
 
-    .header {
-        height: calc(var(--header-height) + 1rem);
-        padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
-    }
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
 
-    .header_img {
-        width: 40px;
-        height: 40px;
-    }
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
 
-    .header_img img {
-        width: 45px
-    }
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
 
-    .l-navbar {
-        left: 0;
-        padding: 1rem 1rem 0 0
-    }
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
 
-    .show {
-        width: calc(var(--nav-width) + 156px)
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
     }
-
-    .body-pd {
-        padding-left: calc(var(--nav-width) + 188px)
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
     }
 }
