--- a/front-end/css/base.css
+++ b/front-end/css/base.css
@@ -2,62 +2,69 @@
     DEMO STYLE
 */
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap");
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+  font-family: "Inter", sans-serif;
+  background: #fafafa;
 }
-
+i {
+  vertical-align: middle;
+}
 p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
+  font-family: "Inter", sans-serif;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 1.7em;
+  color: #999;
 }
 
 a,
 a:hover,
 a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 .navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  padding: 15px 10px;
+  background: #fff;
+  border: none;
+  border-radius: 0;
+  margin-bottom: 40px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
-.navbar-nav{
-    align-items: center;
+.navbar-nav {
+  align-items: center;
 }
-.nav-link i{
-    font-size: 25px;
+.nav-link i {
+  font-size: 25px;
+  margin: 5px;
+  padding: 5px;
 }
-.nav-link .name{
-    margin: 0;
+.nav-link .name {
+  margin: 0;
+  margin-left: 20px;
 }
-.nav-link .profession{
-    margin: 0;
-    font-size: 14px;
+.nav-link .profession {
+  margin: 0;
+  line-height: 1;
+  text-align: right;
+  font-size: 14px;
 }
 .navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
+  box-shadow: none;
+  outline: none !important;
+  border: none;
 }
-.nav-item .nav-link img{
-    max-width: 40px;
+.nav-item .nav-link img {
+  max-width: 40px;
 }
 .line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed #999;
+  margin: 40px 0;
 }
 
 /* ---------------------------------------------------
@@ -65,113 +72,136 @@ a:focus {
 ----------------------------------------------------- */
 
 .wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
+  display: flex;
+  width: 100%;
+  align-items: stretch;
 }
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
+  min-width: 250px;
+  max-width: 250px;
+  background: #fff;
+  color: #787486;
+  transition: all 0.3s;
+  padding: 0 20px;
 }
 
 #sidebar.active {
-    margin-left: -250px;
+  margin-left: -250px;
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
+  padding: 20px;
+  background: #fff;
 }
 #sidebar .sidebar-header .logo {
-    max-width: 50px
+  max-width: 50px;
 }
 #sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+  padding: 20px 0;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 #sidebar ul p {
-    color: #fff;
-    padding: 10px;
+  padding: 10px;
 }
 
 #sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
+  padding: 10px;
+  font-size: 16px;
+  display: block;
+}
+#sidebarCollapse i {
+  font-size: 25px;
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+  background: #fff;
 }
 
-#sidebar ul li.active>a,
+#sidebar ul li.active > a,
 a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+  background: #fff;
 }
 
 a[data-toggle="collapse"] {
-    position: relative;
+  position: relative;
 }
 
 .dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
 }
 
 ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #6d7fcc;
+  font-size: 0.9em !important;
+  padding-left: 30px !important;
+  background: #fff;
 }
-
+ul li i {
+  font-size: 25px;
+}
+.sidebar-second-part li i {
+  font-size: 10px;
+}
+.sidebar-second-part li i.crime-history {
+  color: #7ac555;
+}
+.sidebar-second-part li i.crime-report {
+  color: #ffa500;
+}
+.sidebar-second-part li i.crime-forum {
+  color: #e4ccfd;
+}
+.sidebar-second-part li i.crime-logout {
+  color: #e4ccfd;
+}
 ul.CTAs {
-    padding: 20px;
+  padding: 20px;
 }
 
 ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
+  text-align: center;
+  font-size: 0.9em !important;
+  display: block;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: #fff;
+  color: #000000;
+  font-size: 14px;
 }
-ul.CTAs .title{
-    text-align: center;
+ul.CTAs .title {
+  text-align: center;
+  color: #000;
 }
-ul.CTAs .text{
-    font-size: 12px;
+ul.CTAs .text {
+  font-size: 12px;
+  color: #000;
 }
 ul.CTAs i {
-    text-align: center;
-    font-size: 2.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
+  text-align: center;
+  font-size: 2.9em !important;
+  display: block;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  color: #fbcb18;
 }
 ul.CTAs {
-   background-color: #6d7fcc;
+  background-color: #f5f5f5;
 }
 
-
 a.download {
-    background: #fff;
-    color: #7386D5;
+  background: #fff;
+  color: #7386d5;
 }
 
 a.article,
 a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
+  background: #6d7fcc !important;
+  color: #fff !important;
 }
 
 /* ---------------------------------------------------
@@ -179,24 +209,46 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-    width: 100%;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
+  width: 100%;
+
+  min-height: 100vh;
+  transition: all 0.3s;
 }
 
+.main-body .body-content {
+  padding: 40px;
+}
+.main-body .body-content .page-title h2 {
+  font-size: 46px;
+  font-weight: 500;
+}
+.main-body .body-content .border-box {
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.main-body .body-content .filter {
+  text-align: center;
+  font-size: 16px;
+  color: #787486;
+  display: inline-block;
+  padding: 3px 15px;
+  margin: 5px 15px 0 0;
+}
+.main-body .body-content .filter i {
+  vertical-align: inherit;
+}
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
+  #sidebar {
+    margin-left: -250px;
+  }
+  #sidebar.active {
+    margin-left: 0;
+  }
+  #sidebarCollapse span {
+    display: none;
+  }
 }
