--- a/front-end/css/base.css
+++ b/front-end/css/base.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap");
 body {
   font-family: "Inter", sans-serif;
-  background: #fafafa;
+  background-color: #fff;
 }
 i {
   vertical-align: middle;
@@ -42,9 +42,15 @@ a:focus {
   margin: 5px;
   padding: 5px;
 }
+.top-profile-btn {
+  cursor: pointer;
+}
 .nav-link .name {
   margin: 0;
-  margin-left: 20px;
+  margin-left: 18px;
+  font-size: 18px;
+  text-align: right;
+  color: #0d062d;
 }
 .nav-link .profession {
   margin: 0;
@@ -66,7 +72,35 @@ a:focus {
   border-bottom: 1px dashed #999;
   margin: 40px 0;
 }
-
+a.top-profile-btn {
+  max-width: 400px;
+}
+.navbar .dropdown-menu {
+  left: -80px !important;
+  color: #787486;
+}
+a.top-profile-btn img {
+  max-width: 50px;
+}
+.top-search-form {
+  max-width: 500px;
+  margin-left: 50px;
+}
+.top-search-form input {
+  border: none;
+  background-color: #f5f5f5;
+  font-size: 20px;
+}
+.top-search-form button {
+  font-size: 20px;
+  background-color: #f5f5f5;
+  cursor: default !important;
+  border: none;
+}
+.top-search-form .form-control:focus {
+  box-shadow: none;
+  background-color: #f5f5f5;
+}
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -84,6 +118,7 @@ a:focus {
   color: #787486;
   transition: all 0.3s;
   padding: 0 20px;
+  border-right: 1px solid #dbdbdb;
 }
 
 #sidebar.active {
@@ -111,17 +146,20 @@ a:focus {
   font-size: 16px;
   display: block;
 }
+#sidebarCollapse {
+  border-color: rgba(0, 0, 0, 0.1);
+}
 #sidebarCollapse i {
   font-size: 25px;
 }
 
 #sidebar ul li a:hover {
-  background: #fff;
+  color: #000;
 }
 
 #sidebar ul li.active > a,
 a[aria-expanded="true"] {
-  background: #fff;
+  color: #000;
 }
 
 a[data-toggle="collapse"] {
@@ -161,6 +199,8 @@ ul li i {
 }
 ul.CTAs {
   padding: 20px;
+  margin-top: 7vh;
+  border-radius: 10px;
 }
 
 ul.CTAs a {
@@ -176,10 +216,17 @@ ul.CTAs a {
 ul.CTAs .title {
   text-align: center;
   color: #000;
+  padding: 0;
+  margin: 0;
+}
+ul.CTAs .title p {
+  margin: 0;
+  padding: 0 !important;
 }
 ul.CTAs .text {
   font-size: 12px;
   color: #000;
+  text-align: center;
 }
 ul.CTAs i {
   text-align: center;
