--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,15 @@
             <a href="#"><i class="crime-forum bx bxs-circle"></i> Forum</a>
           </li>
           <li>
-            <a href="#"><i class="crime-logout bx bxs-circle"></i> Logout</a>
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'logoutView' %}"
+              ><i class="crime-logout bx bxs-circle"></i> Logout</a
+            >
+            {% else %}
+            <a href="{% url 'loginView' %}"
+              ><i class="crime-logout bx bxs-circle"></i> Login</a
+            >
+            {% endif %}
           </li>
         </ul>
         <ul class="list-unstyled CTAs">
@@ -168,15 +176,20 @@
                     ><i class="bx bx-help-circle"></i
                   ></a>
                 </li>
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="#"><i class="bx bx-bell"></i></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link"
-                    ><p class="name">Najmul H. Bappy</p>
+                    ><p class="name">
+                      {{ request.user.first_name }} {{ request.user.last_name }}
+                    </p>
                     <p class="profession">Student</p></a
                   >
                 </li>
+                {% endif %} {% if request.user.is_authenticated %}
+
                 <div class="dropdown nav-link">
                   <a
                     class="row top-profile-btn"
@@ -199,9 +212,16 @@
                   >
                     <a class="dropdown-item" href="#">Profile</a>
                     <a class="dropdown-item" href="#">Edit Profile</a>
-                    <a class="dropdown-item" href="#">Logout</a>
+                    <a class="dropdown-item" href="{% url 'logoutView' %}"
+                      >Logout</a
+                    >
                   </div>
                 </div>
+                {% else %}
+                <a href="{% url 'loginView' %}" class="btn btn-secondary"
+                  >Login</a
+                >
+                {% endif %}
               </ul>
             </div>
           </div>
