--- a/templates/login.html
+++ b/templates/login.html
@@ -18,10 +18,16 @@
                   Enter your email address and password to login.
                 </p>
 
-                <form>
+                <form method="post">
+                  {% csrf_token %}
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="username" />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="username"
+                      name="username"
+                    />
                   </div>
                   <div class="form-group mb-5">
                     <label for="exampleInputPassword1">Password</label>
@@ -29,6 +35,7 @@
                       type="password"
                       class="form-control"
                       id="exampleInputPassword1"
+                      name="password"
                     />
                   </div>
                   <button type="submit" class="btn btn-theme">Login</button>
