--- a/front-end/css/base.css
+++ b/front-end/css/base.css
@@ -1,301 +1,57 @@
-/*
-    DEMO STYLE
-*/
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap");
 body {
-  font-family: "Inter", sans-serif;
-  background-color: #fff;
-}
-i {
-  vertical-align: middle;
-}
-p {
-  font-family: "Inter", sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-  line-height: 1.7em;
-  color: #999;
+  font-family: 'Inter', sans-serif;
 }
 
-a,
-a:hover,
-a:focus {
-  color: inherit;
+body .menu-bar {
+  background-color: #f8f9fa;
+}
+
+body .menu-bar nav {
+  margin: auto 20px;
+}
+
+body .menu-bar nav .logo {
+  width: 20%;
+}
+
+body .menu-bar nav .navbar-brand {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: #0D062D;
+}
+
+body .menu-bar nav .nav-bar-right .profile {
   text-decoration: none;
-  transition: all 0.3s;
 }
 
-.navbar {
-  padding: 15px 10px;
-  background: #fff;
-  border: none;
-  border-radius: 0;
-  margin-bottom: 40px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-.navbar-nav {
-  align-items: center;
-}
-.nav-link i {
-  font-size: 25px;
-  margin: 5px;
-  padding: 5px;
-}
-.top-profile-btn {
-  cursor: pointer;
-}
-.nav-link .name {
-  margin: 0;
-  margin-left: 18px;
-  font-size: 18px;
-  text-align: right;
-  color: #0d062d;
-}
-.nav-link .profession {
-  margin: 0;
-  line-height: 1;
-  text-align: right;
-  font-size: 14px;
-}
-.navbar-btn {
-  box-shadow: none;
-  outline: none !important;
-  border: none;
-}
-.nav-item .nav-link img {
-  max-width: 40px;
-}
-.line {
-  width: 100%;
-  height: 1px;
-  border-bottom: 1px dashed #999;
-  margin: 40px 0;
-}
-a.top-profile-btn {
-  max-width: 400px;
-}
-.navbar .dropdown-menu {
-  left: -80px !important;
-  color: #787486;
-}
-a.top-profile-btn img {
-  max-width: 50px;
-}
-.top-search-form {
-  max-width: 500px;
-  margin-left: 50px;
-}
-.top-search-form input {
-  border: none;
-  background-color: #f5f5f5;
-  font-size: 20px;
-}
-.top-search-form button {
-  font-size: 20px;
-  background-color: #f5f5f5;
-  cursor: default !important;
-  border: none;
-}
-.top-search-form .form-control:focus {
-  box-shadow: none;
-  background-color: #f5f5f5;
-}
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
-.wrapper {
-  display: flex;
-  width: 100%;
-  align-items: stretch;
+body .menu-bar nav .nav-bar-right .profile .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-#sidebar {
-  min-width: 250px;
-  max-width: 250px;
-  background: #fff;
-  color: #787486;
-  transition: all 0.3s;
-  padding: 0 20px;
-  border-right: 1px solid #dbdbdb;
+body .menu-bar nav .nav-bar-right .profile img {
+  max-height: 50px;
+  width: auto;
 }
 
-#sidebar.active {
-  margin-left: -250px;
+body .menu-bar nav .nav-bar-right .profile .column {
+  margin-left: 10px;
 }
 
-#sidebar .sidebar-header {
-  padding: 20px;
-  background: #fff;
-}
-#sidebar .sidebar-header .logo {
-  max-width: 50px;
-}
-#sidebar ul.components {
-  padding: 20px 0;
-  border-bottom: 1px solid #dbdbdb;
-}
-
-#sidebar ul p {
-  padding: 10px;
-}
-
-#sidebar ul li a {
-  padding: 10px;
+body .menu-bar nav .nav-bar-right .profile .name {
   font-size: 16px;
-  display: block;
-}
-#sidebarCollapse {
-  border-color: rgba(0, 0, 0, 0.1);
-}
-#sidebarCollapse i {
-  font-size: 25px;
+  color: #0D062D;
 }
 
-#sidebar ul li a:hover {
-  color: #000;
-}
-
-#sidebar ul li.active > a,
-a[aria-expanded="true"] {
-  color: #000;
-}
-
-a[data-toggle="collapse"] {
-  position: relative;
-}
-
-.dropdown-toggle::after {
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-}
-
-ul ul a {
-  font-size: 0.9em !important;
-  padding-left: 30px !important;
-  background: #fff;
-}
-ul li i {
-  font-size: 25px;
-}
-.sidebar-second-part li i {
-  font-size: 10px;
-}
-.sidebar-second-part li i.crime-history {
-  color: #7ac555;
-}
-.sidebar-second-part li i.crime-report {
-  color: #ffa500;
-}
-.sidebar-second-part li i.crime-forum {
-  color: #e4ccfd;
-}
-.sidebar-second-part li i.crime-logout {
-  color: #e4ccfd;
-}
-ul.CTAs {
-  padding: 20px;
-  margin-top: 7vh;
-  border-radius: 10px;
-}
-
-ul.CTAs a {
-  text-align: center;
-  font-size: 0.9em !important;
-  display: block;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  background-color: #fff;
-  color: #000000;
-  font-size: 14px;
-}
-ul.CTAs .title {
-  text-align: center;
-  color: #000;
-  padding: 0;
-  margin: 0;
-}
-ul.CTAs .title p {
-  margin: 0;
-  padding: 0 !important;
-}
-ul.CTAs .text {
-  font-size: 12px;
-  color: #000;
-  text-align: center;
-}
-ul.CTAs i {
-  text-align: center;
-  font-size: 2.9em !important;
-  display: block;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  color: #fbcb18;
-}
-ul.CTAs {
-  background-color: #f5f5f5;
-}
-
-a.download {
-  background: #fff;
-  color: #7386d5;
-}
-
-a.article,
-a.article:hover {
-  background: #6d7fcc !important;
-  color: #fff !important;
-}
-
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-  width: 100%;
-
-  min-height: 100vh;
-  transition: all 0.3s;
-}
-
-.main-body .body-content {
-  padding: 40px;
-}
-.main-body .body-content .page-title h2 {
-  font-size: 46px;
-  font-weight: 500;
-}
-.main-body .body-content .border-box {
-  border: 1px solid #000;
-  border-radius: 5px;
-}
-.main-body .body-content .filter {
-  text-align: center;
-  font-size: 16px;
+body .menu-bar nav .nav-bar-right .profile .profession {
   color: #787486;
-  display: inline-block;
-  padding: 3px 15px;
-  margin: 5px 15px 0 0;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  text-align: right;
 }
-.main-body .body-content .filter i {
-  vertical-align: inherit;
-}
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
-
-@media (max-width: 768px) {
-  #sidebar {
-    margin-left: -250px;
-  }
-  #sidebar.active {
-    margin-left: 0;
-  }
-  #sidebarCollapse span {
-    display: none;
-  }
-}
+/*# sourceMappingURL=base.css.map */
