--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="{% static 'base.css'%}" />
+    <link rel="stylesheet" href="{% static 'css/base.css'%}" />
     {% block css %} {% endblock %}
   </head>
   <body>
@@ -178,7 +178,9 @@
                 </li>
                 {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bx bx-bell"></i></a>
+                  <a class="nav-link before-dot" href="#"
+                    ><i class="bx bx-bell"></i
+                  ></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link"
