--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block css %} {% load static %}
-<link rel="stylesheet" href="{% static 'style.css' %}" />
+<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %} {% block main %}
 <div id="main-wrapper" class="container">
   <div class="row justify-content-center">
