--- a/templates/add-file.html
+++ b/templates/add-file.html
@@ -1,76 +1,87 @@
 {% extends "base.html" %} {% block main %} {% load static %} {% block css %}
-<link rel="stylesheet" href="{% static 'css/file-history/style.css' %}" />
+<link rel="stylesheet" href="{% static 'css/post-report/style.css' %}" />
 {% endblock %}
 <div class="page-title">
   <h2>Submit a Report</h2>
 </div>
-<div class="submission-form">
-  <form>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputfortitle">Short Title</label>
-        <input
-          type="text"
-          class="form-control"
-          id="inputfortitle"
-          placeholder="Short Description. Example: Arif is attacked by someone"
-        />
+<div class="submission-form row">
+  <div class="col-md-10">
+    <form method="post">
+      {% csrf_token %}
+      <div class="form-row gx-5">
+        <div class="form-group col-md-4">
+          <label for="inputfortitle">Short Title</label>
+          <textarea
+            type="text"
+            class="form-control"
+            id="inputfortitle"
+            placeholder="Short Description. Example: Arif is attacked by someone"
+            name="title"
+            required
+          ></textarea>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="victimsInfo">Victim's Information</label>
+          <textarea
+            type="text"
+            class="form-control"
+            id="victimsInfo"
+            placeholder="Example: Arif Hossain. 23 Years old."
+            name="victim"
+            required
+          ></textarea>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputcriminal">Suspects</label>
+          <textarea
+            type="text"
+            class="form-control"
+            id="inputcriminal"
+            placeholder="Name: Firoz. 23 years old"
+            name="suspect"
+            required
+          ></textarea>
+        </div>
       </div>
-      <div class="form-group col-md-6">
-        <label for="victimsInfo">Victim's Information</label>
-        <input
-          type="text"
-          class="form-control"
-          id="victimsInfo"
-          placeholder="Example: Arif Hossain. 23 Years old."
-        />
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputfordescription">Description</label>
+          <textarea
+            type="text"
+            class="form-control"
+            id="inputfordescription"
+            placeholder="Describe in detail..."
+            name="description"
+            required
+          ></textarea>
+        </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputcriminal">Suspects</label>
-        <textarea
-          type="text"
-          class="form-control"
-          id="inputcriminal"
-          placeholder="Name: Firoz. 23 years old"
-        ></textarea>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="inputphone">Contact Number</label>
+          <input
+            type="text"
+            class="form-control"
+            id="inputphone"
+            placeholder="01********"
+            name="phone"
+            required
+          />
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputState">Report Type</label>
+          <select id="inputState" class="form-control" name="type" required>
+            <option value="">None</option>
+            <option value="GD">GD</option>
+            <option value="CF">CASE FILE</option>
+          </select>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="inputAddress2">Address 2</label>
-        <textarea
-          type="text"
-          class="form-control"
-          id="inputAddress2"
-          placeholder="Apartment, studio, or floor"
-        ></textarea>
+      <div class="form-row">
+        <button type="submit" class="btn btn-secondary">Submit</button>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputCity">City</label>
-        <input type="text" class="form-control" id="inputCity" />
-      </div>
-      <div class="form-group col-md-4">
-        <label for="inputState">State</label>
-        <select id="inputState" class="form-control">
-          <option selected>Choose...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
-        <input type="text" class="form-control" id="inputZip" />
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck" />
-        <label class="form-check-label" for="gridCheck"> Check me out </label>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
-  </form>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
