--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page | Crime File Management System</title>
-    <script src="/files/base.js"></script>
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -92,12 +91,12 @@
         </ul>
         <ul class="list-unstyled sidebar-second-part">
           <li>
-            <a href="#"
+            <a href="{% url 'fileHistoryView' %}"
               ><i class="crime-history bx bxs-circle"></i> Crime File History</a
             >
           </li>
           <li>
-            <a href="#"
+            <a href="{% url 'addFileView' %}"
               ><i class="crime-report bx bxs-circle"></i> Report A File</a
             >
           </li>
