Single file page

--- a/templates/add-file.html
+++ b/templates/add-file.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %} {% block main %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block css %}
 <link rel="stylesheet" href="{% static 'css/post-report/style.css' %}" />
-{% endblock %}
+{% endblock %} {% block main %}
 <div class="page-title">
   <h2>Submit a Report</h2>
 </div>
