--- a/templates/base.html
+++ b/templates/base.html
@@ -55,16 +55,16 @@
 
         <ul class="list-unstyled components">
           <li class="active">
-            <a href="#"><i class="bx bx-grid-alt"></i> Home</a>
-          </li>
-          <li>
             <a href="#"><i class="bx bx-user-voice"></i> Announcement</a>
           </li>
           <li>
-            <a href="#"><i class="bx bx-search"></i> Wanted Person</a>
+            <a href="#"><i class="bx bx-user-minus"></i> Missing Person</a>
           </li>
           <li>
-            <a href="#"><i class="bx bx-wrench"></i> Settings</a>
+            <a href="#"><i class="bx bx-search-alt"></i> Wanted Person</a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bx-message-square-dots"></i> Forum</a>
           </li>
           <!-- Dropdown menu 
           <li>
@@ -101,7 +101,7 @@
             >
           </li>
           <li>
-            <a href="#"><i class="crime-forum bx bxs-circle"></i> Forum</a>
+            <a href="#"><i class="crime-forum bx bxs-circle"></i> Settings</a>
           </li>
           <li>
             {% if request.user.is_authenticated %}
