--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,12 +13,22 @@
                   <h3 class="h4 font-weight-bold text-theme">
                     Welcome to CFMS!
                   </h3>
+                  {% if got_error %}
+                  <p class="text-danger mb-5">
+                    {%if email %} {{email}}<br />
+                    {%endif%} {%if nid %} {{nid}}<br />
+                    {%endif%} {%if username %} {{username}} {%endif%}
+                  </p>
+
+                  {%else%}
                   <p class="text-muted mb-5">
                     Enter your all the information to get started.
                   </p>
+                  {%endif%}
                 </div>
 
-                <form>
+                <form method="post">
+                  {% csrf_token %}
                   <div class="form-row">
                     <div class="form-group col-md-4">
                       <label for="inputEmail4">First Name</label>
@@ -78,12 +88,12 @@
                       />
                     </div>
                     <div class="form-group col-md-4">
-                      <label for="confirmpassword">Password</label>
+                      <label for="confirmpassword">Confirm Password</label>
                       <input
-                        type="password1"
+                        type="password"
                         class="form-control"
                         id="confirmpassword"
-                        placeholder="Password"
+                        placeholder="Confirm Password"
                         required
                       />
                     </div>
@@ -95,6 +105,7 @@
                         type="number"
                         class="form-control"
                         id="nid"
+                        name="nid"
                         placeholder="NID number"
                         required
                       />
