missing person initiallized with front-end

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,9 @@
             <a href="#"><i class="bx bx-user-voice"></i> Announcement</a>
           </li>
           <li>
-            <a href="#"><i class="bx bx-user-minus"></i> Missing Person</a>
+            <a href="{% url 'missingPerson' %}"
+              ><i class="bx bx-user-minus"></i> Missing Person</a
+            >
           </li>
           <li>
             <a href="#"><i class="bx bx-search-alt"></i> Wanted Person</a>
